@@ -14,5 +14,7 @@ Additional thanks to:
 	Robert Ham (rah)
 	Steve Harris (swh)
 	Thorsten Wilms (thorwil)
+	Hanspeter Portner (ventosus)
+	Thomas Brand (tom_)
 
 	... and others for influence, ideas, bug reports, etc.
